fixed picture clipping

--- a/port/src/style/home/_introduction.scss
+++ b/port/src/style/home/_introduction.scss
@@ -31,7 +31,7 @@
     position: absolute;
     display: flex;
     justify-items: flex-end;
-    top: 7.5vh;
+    top: 5.5vh;
     width: 40vw;
     right: 0vw;
     height: 90vh;
